fix: publish cluster.conf atomically